# garagem

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_marcas.py  0003_marca_delete_marcas.py  0004_acessorio_cor_veiculo.py  0005_alter_cor_options.py
garagem/models/: categoria.py  cor.py  marca.py  veiculo.py
