[project]
name = ""
version = ""
description = ""
authors = [
    {name = "carlos", email = "kaduardomello@gmail.com"},
]
dependencies = [
    "django>=4.1.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "setuptools>=68.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
